--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: command-line-navigation
+title: Command Line Navigation
 hero_image: images/banner.png
 description: command-line-navigation description
 version: 4
@@ -6,6 +6,4 @@ listed: false
 copyedit: false
 last_tested: "2018-05-09"
 steps:
-  - title: Introduction
-  - title: What you will need
-  - title: Step title
+  - title: Command Line Navigation
